--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.7",
     "@mui/material-nextjs": "^6.4.3",
     "@neondatabase/serverless": "^0.10.4",
+    "@vercel/blob": "^0.27.2",
     "date-fns": "^4.1.0",
     "formidable": "^3.5.2",
     "next": "15.2.2",
